// Vitest Snapshot v1

exports[`Search > Search baseVue demo works fine 1`] = `
<div>
  <div
    class="t-search"
  >
    <div
      class="t-search__form"
    >
      <div
        class="t-search__box"
      >
        <div
          class="t-search__icon-search"
        >
          
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-search__input"
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-input__wrap"
            >
              <input
                autocomplete="Off"
                class="t-input__control"
                maxlength="-1"
                name=""
                placeholder="请输入关键字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            
          </div>
          <!--v-if-->
        </div>
      </div>
      <label
        class="t-search__label"
      >
        <div
          class="t-search__label-icon-search"
        >
          
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
        <span
          class="t-search__label-text"
        >
          请输入关键字
        </span>
      </label>
    </div>
    
    <!--v-if-->
    
  </div>
</div>
`;

exports[`Search > Search colorVue demo works fine 1`] = `
<div>
  <div
    class="t-search"
    icon-color="#0052d9"
  >
    <div
      class="t-search__form"
    >
      <div
        class="t-search__box"
      >
        <div
          class="t-search__icon-search"
        >
          
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-search__input"
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-input__wrap"
            >
              <input
                autocomplete="Off"
                class="t-input__control"
                maxlength="-1"
                name=""
                placeholder="请输入关键字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            
          </div>
          <!--v-if-->
        </div>
      </div>
      <label
        class="t-search__label"
      >
        <div
          class="t-search__label-icon-search"
        >
          
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
        <span
          class="t-search__label-text"
        >
          请输入关键字
        </span>
      </label>
    </div>
    
    <!--v-if-->
    
  </div>
</div>
`;

exports[`Search > Search mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Search 搜索框
  </h1>
  <p
    class="summary"
  >
    用于用户输入搜索信息，并进行页面内容搜索
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础搜索框
    </p>
    
    <div
      class="t-search"
    >
      <div
        class="t-search__form"
      >
        <div
          class="t-search__box"
        >
          <div
            class="t-search__icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-search__input"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-input__wrap"
              >
                <input
                  autocomplete="Off"
                  class="t-input__control"
                  maxlength="-1"
                  name=""
                  placeholder="搜索预设文案"
                  type="text"
                />
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              
            </div>
            <!--v-if-->
          </div>
        </div>
        <label
          class="t-search__label"
        >
          <div
            class="t-search__label-icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <span
            class="t-search__label-text"
          >
            搜索预设文案
          </span>
        </label>
      </div>
      
      <!--v-if-->
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      默认状态
    </p>
    
    <div
      class="t-search"
    >
      <div
        class="t-search__form"
      >
        <div
          class="t-search__box"
        >
          <div
            class="t-search__icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-search__input"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-input__wrap"
              >
                <input
                  autocomplete="Off"
                  class="t-input__control"
                  maxlength="-1"
                  name=""
                  placeholder="搜索预设文案"
                  type="text"
                />
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              
            </div>
            <!--v-if-->
          </div>
        </div>
        <label
          class="t-search__label"
        >
          <div
            class="t-search__label-icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <span
            class="t-search__label-text"
          >
            搜索预设文案
          </span>
        </label>
      </div>
      
      <!--v-if-->
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      点击状态
    </p>
    
    <div
      autofocus="true"
      class="t-search"
    >
      <div
        class="t-search__form"
      >
        <div
          class="t-search__box"
        >
          <div
            class="t-search__icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-search__input"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-input__wrap"
              >
                <input
                  autocomplete="Off"
                  class="t-input__control"
                  maxlength="-1"
                  name=""
                  placeholder="搜索预设文案"
                  type="text"
                />
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              
            </div>
            <!--v-if-->
          </div>
        </div>
        <label
          class="t-search__label"
        >
          <div
            class="t-search__label-icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <span
            class="t-search__label-text"
          >
            搜索预设文案
          </span>
        </label>
      </div>
      
      <!--v-if-->
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      输入状态
    </p>
    
    <div
      autofocus="true"
      class="t-search"
    >
      <div
        class="t-search__form"
      >
        <div
          class="t-search__box"
        >
          <div
            class="t-search__icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-search__input"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-input__wrap"
              >
                <input
                  autocomplete="Off"
                  class="t-input__control"
                  maxlength="-1"
                  name=""
                  placeholder="搜索预设文案"
                  type="text"
                />
                <div
                  class="t-input__wrap--icon"
                >
                  <svg
                    class="t-icon t-icon-close-circle-filled"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <!--v-if-->
              </div>
              <!--v-if-->
              
            </div>
            <!--v-if-->
          </div>
        </div>
        <label
          class="t-search__label"
        >
          <div
            class="t-search__label-icon-search"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <span
            class="t-search__label-text"
          >
            搜索预设文案
          </span>
        </label>
      </div>
      
      <!--v-if-->
      
    </div>
    
  </div>
</div>
`;
